<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrabajoFinal</string>
    <string name="action_settings">Settings</string>

    <string name="user_id">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>

    <string name="mainmenu">Menú principal</string>
    <string name="takeorder">Tomar pedido</string>
    <string name="pending">Pendientes</string>

    <string name="selecttable">Seleccione la mesa</string>

    <string name="appetizer">Entradas</string>
    <string name="maindish">Plato Fuerte</string>
    <string name="dessert">Postres</string>
    <string name="calculate">Calcular</string>
    <string name="cancel">Cancelar</string>
    <string name="invoice">Factura</string>

    <string name="filterhint">Filtro de búsqueda</string>

    <string name="order">Ordenar</string>

</resources>
