<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMMBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainmenu"
        android:gravity="center"
        android:textSize="28dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btMMTomarOrden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/takeorder"
            android:textSize="20dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btMMPendientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:textSize="20dp"
            android:layout_weight="1"/>

        </LinearLayout>

</LinearLayout>